--- a/project-functional.cabal
+++ b/project-functional.cabal
@@ -1,17 +1,19 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.2.
+-- This file has been generated from package.yaml by hpack version 0.33.0.
 --
 -- see: https://github.com/sol/hpack
+--
+-- hash: 326fab66602f5c87910b6537bc5d77119f62e3f721e9e6fb0f8f9ef7c01e7e67
 
 name:           project-functional
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/def4alt/project-functional#readme>
-homepage:       https://github.com/githubuser/project-functional#readme
-bug-reports:    https://github.com/githubuser/project-functional/issues
-author:         Def4alt
+homepage:       https://github.com/def4alt/project-functional#readme
+bug-reports:    https://github.com/def4alt/project-functional/issues
+author:         Andrii Olkhovych
 maintainer:     bronzemonet@gmail.com
-copyright:      2020 Def4alt
+copyright:      2020 Andrii Olkhovych
 license:        MIT
 license-file:   LICENSE
 build-type:     Simple
@@ -31,7 +33,7 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      base
   default-language: Haskell2010
 
 executable project-functional-exe
@@ -42,7 +44,7 @@ executable project-functional-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      base
     , project-functional
   default-language: Haskell2010
 
@@ -50,11 +52,14 @@ test-suite project-functional-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      LibSpec
+      SpecHelper
       Paths_project_functional
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      base
+    , hspec
     , project-functional
   default-language: Haskell2010
