--- a/project-functional.cabal
+++ b/project-functional.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 326fab66602f5c87910b6537bc5d77119f62e3f721e9e6fb0f8f9ef7c01e7e67
+-- hash: ff7ab0f7c49727fcc17dea6c87350741831f3daa448beae8f0dca2322c4c30e4
 
 name:           project-functional
 version:        0.1.0.0
@@ -50,16 +50,18 @@ executable project-functional-exe
 
 test-suite project-functional-test
   type: exitcode-stdio-1.0
-  main-is: Spec.hs
+  main-is: Driver.hs
   other-modules:
-      LibSpec
-      SpecHelper
+      LibTest
+      TestHelper
       Paths_project_functional
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base
-    , hspec
     , project-functional
+    , tasty
+    , tasty-discover
+    , tasty-hunit
   default-language: Haskell2010
