--- a/stack.yaml
+++ b/stack.yaml
@@ -4,26 +4,9 @@
 # For advanced use and comprehensive documentation of the format, please see:
 # https://docs.haskellstack.org/en/stable/yaml_configuration/
 
-resolver: ghc-8.10.1
+resolver: lts-14.27
 
 packages:
 - .
 
 extra-deps:
-- hspec-2.7.1
-- QuickCheck-2.14.1
-- hspec-core-2.7.1
-- hspec-discover-2.7.1
-- hspec-expectations-0.8.2
-- HUnit-1.6.0.0
-- ansi-terminal-0.10.3
-- call-stack-0.2.0
-- clock-0.8
-- quickcheck-io-0.2.0
-- random-1.2.0
-- setenv-0.1.1.3
-- splitmix-0.1.0.1
-- tf-random-0.5
-- colour-2.3.5
-- mintty-0.1.2
-- primitive-0.7.1.0
